# automaton-core

./: .all-contributorsrc  .gitattributes  .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  appveyor.yml  build-and-run-automaton-core.ps1  build-and-run-automaton-core.sh  download_and_build_third_party_libs.sh  download_and_build_third_party_libs_windows.ps1  run-playground-gui.sh  stop-automaton-core.sh  warnings.patch
docs/: README.md  (+1 more)
src/: CMakeLists.txt  Doxyfile  WORKSPACE  mapped_file.txt  mapped_file_insert_and_delete_expect_blank  mapped_vector_commit_changes  mapped_vector_delete_node_tree  mapped_vector_delete_node_tree_plus_commit_discard_free_backup_add_node  mapped_vector_discard_changes  mapped_vector_get_node_hash  mapped_vector_node_hash_add_erase  mapped_vector_set_and_get  mapped_vector_set_delete_and_get  mapped_vector_using_deleted_locations
src/automaton/: lint.sh  lint_ui.sh  replace.py
src/automaton/core/: BUILD  core.cc  core.lua  coreinit.json  rpc.proto  rpc_server_core_test.cc
src/automaton/core/cli/: BUILD  cli.cc  cli.h
src/automaton/core/common/: BUILD  status.cc  status.h  version.h  versions.h
src/automaton/core/crypto/: BUILD  crypto.md  digital_signature.cc  digital_signature.h  hash_transformation.cc  hash_transformation.h  secure_random.cc  secure_random.h
src/automaton/core/crypto/cryptopp/: BUILD  Keccak_256_cryptopp.cc  Keccak_256_cryptopp.h  RIPEMD160_cryptopp.cc  RIPEMD160_cryptopp.h  SHA256_cryptopp.cc  SHA256_cryptopp.h  SHA3_256_cryptopp.cc  SHA3_256_cryptopp.h  SHA512_cryptopp.cc  SHA512_cryptopp.h  secp256k1_cryptopp.cc  secp256k1_cryptopp.h  secure_random_cryptopp.cc  secure_random_cryptopp.h
src/automaton/core/crypto/ed25519_orlp/: BUILD  ed25519_orlp.cc  ed25519_orlp.h
src/automaton/core/crypto/secp256k1/: BUILD
src/automaton/core/data/: BUILD  data_exception.h  docs.md  factory.cc  factory.h  msg.cc  msg.h  schema.cc  schema.h
src/automaton/core/data/protobuf/: BUILD  protobuf_factory.cc  protobuf_factory.h  protobuf_msg.cc  protobuf_msg.h  protobuf_schema.cc  protobuf_schema.h
src/automaton/core/eth_contract/: eth_contract.cc  eth_contract.h  eth_contract0.cc  eth_contract0.h  eth_contract_curl.cc  eth_contract_curl.h  eth_contract_curl_test.cc  eth_contract_raw.cc  eth_contract_raw.h  eth_contract_raw_test.cc  eth_contract_test.cc
src/automaton/core/eth_rpc/: eth_rpc.cc  eth_rpc.h  test.cc
src/automaton/core/io/: BUILD  blob.cc  blob.h  io.cc  io.h
src/automaton/core/network/: BUILD  acceptor.cc  acceptor.h  connection.cc  connection.h  http_server.cc  http_server.h  not_rpc.h  rpc.cc  rpc.h  rpc_server.cc  rpc_server.h  simulated_connection.cc  simulated_connection.h  tcp_implementation.cc  tcp_implementation.h  zmq_connection.cc  zmq_connection.h
src/automaton/core/node/: BUILD  node.cc  node.h  node_updater.cc  node_updater.h
src/automaton/core/script/: BUILD  bind_crypto.cc  bind_data.cc  engine.cc  engine.h  registry.cc  registry.h
src/automaton/core/smartproto/: BUILD  README.md  node.cc  node.h  smart_protocol.cc  smart_protocol.h
src/automaton/core/state/: BUILD  dummy_state.cc  dummy_state.h  state.cc  state.h  state.md  state1.dot  state_impl.cc  state_impl.h  state_persistent.cc  state_persistent.h  state_transitions.dot
src/automaton/core/storage/: BUILD  blobstore.cc  blobstore.h  persistent_blobstore.cc  persistent_blobstore.h  persistent_storage.cc  persistent_storage.h  persistent_vector.h
src/automaton/core/testnet/: BUILD  testnet.cc  testnet.h
src/automaton/core/web/: index.html  message.js  rpc.html  rpc.js  rpc.proto
src/automaton/examples/bazel/: BUILD
src/automaton/examples/crypto/: BUILD  basic_hash_miner.cc  basic_hash_miner.h  crypto.md  miner_demo.cc
src/automaton/examples/data/: BUILD  dump_schema.cc
src/automaton/examples/log/: BUILD  demo_log.cc  logging.md
src/automaton/examples/network/: node_prototype.cc  node_prototype.h  old_BUILD  simulation_big_test.cc  simulation_test_localhost.cc  simulation_test_node_prototype.cc
src/automaton/examples/script/: BUILD  benchmark.lua  blockchain.lua  blockchain.proto  data.lua  demo_lua.cc  script_demo.lua
src/automaton/playground/: JUCECONFIG.md
src/automaton/playground/PlaygroundGUI/: PlaygroundGUI.jucer
src/automaton/tests/: BUILD  my_test.cc
src/automaton/tests/crypto/: BUILD  test_Keccak_256_cryptopp.cc  test_RIPEMD160_cryptopp.cc  test_SHA256_cryptopp.cc  test_SHA3_256_cryptopp.cc  test_SHA512_cryptopp.cc  test_ed25519_orlp.cc  test_hash_transformation.cc  test_secp256k1_cryptopp.cc
src/automaton/tests/data/: BUILD  invalid_data.proto  many_enums.proto  many_fields.proto  messages.proto  proto_files.cc  proto_files.h  protobuf_schema_all_data_types.cc  protobuf_schema_gtest.cc  protobuf_schema_test.cc  protobuf_schema_test_empty_schema.cc  protobuf_schema_test_enums.cc  protobuf_schema_test_find_all_enums.cc  protobuf_schema_test_find_all_fields.cc  protobuf_schema_test_find_enum.cc  protobuf_schema_test_find_existing_schema.cc  protobuf_schema_test_find_unexisting_schema.cc  protobuf_schema_test_invalid_data.cc  protobuf_schema_test_message_serialization.cc  protobuf_schema_test_setting_fields.cc  schema1.proto  schema2.proto  schema3.proto  test.proto  test_import_dependencies.cc  test_msg_json.cc  test_protobuf_msg.cc
src/automaton/tests/interop/: abi_encoder_test.cc  contract_functions_test.cc
src/automaton/tests/io/: BUILD  test_io.cc
src/automaton/tests/miner/: BUILD  miner_test.cc
src/automaton/tests/network/: BUILD  http_server_test.cc  rpc_server_test.cc  sim_test.cc  tcp_test.cc
src/automaton/tests/script/: BUILD  test_script.cc
src/automaton/tests/state/: BUILD  dummy_state_test.cc  state_persistent_test.cc  state_test.cc
src/automaton/tests/storage/: BUILD  blobstore_test.cc  persistent_blobstore_test.cc  persistent_storage_test.cc
src/automaton/tests/testnet/: BUILD  test.cc  test_localhost.cc  test_simulation.cc
src/automaton/tools/miner/: BUILD  miner.cc  miner.h  miner_main.cc
src/cmake/: BuildDependencies.cmake
src/conditions/: BUILD
(+149 files in other folders)
